--- a/Home.css
+++ b/Home.css
@@ -302,3 +302,310 @@ ul a{
 .copyright {
     padding-top: 30px;
 }
+
+@media screen and (max-width: 600px) {
+   /* General Reset */
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Times New Roman', Times, serif;
+    box-sizing: border-box;
+}
+
+/* Links */
+a {
+    text-decoration: none;
+    color: #0f1111;
+}
+
+/* Navbar */
+.navbar {
+    height: 60px;
+    background-color: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 15px;
+}
+
+.nav-logo {
+    background-image: url("logo.png");
+    height: 59px;
+    width: 100px;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.top-logo {
+    background-image: url("logo.png");
+    background-size: cover;
+    height: 98px;
+    width: 87%;
+    margin: 0 auto;
+    margin-top: -33px;
+}
+
+/* Buttons with borders */
+.border {
+    border: 1.5px solid transparent;
+}
+
+.border:hover {
+    border: 1.5px solid white;
+}
+
+/* Box 2 */
+.add-first {
+    color: #cccccc;
+    font-size: 0.85rem;
+    margin-left: 15px;
+}
+
+.add-second {
+    font-size: 1rem;
+    margin-left: 3px;
+}
+
+.add-icon {
+    display: flex;
+    align-items: center;
+}
+
+/* Box 3 */
+.nav-search {
+    display: flex;
+    justify-content: space-between;
+    background-color: pink;
+    width: 100%;
+    height: 40px;
+    border-radius: 4px;
+}
+
+.search-select {
+    background-color: #f3f3f3;
+    width: 50px;
+    text-align: center;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border: none;
+}
+
+.search-input {
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+}
+
+.search-icon {
+    width: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    background-color: black;
+    color: white;
+}
+
+.nav-search:hover {
+    border: 2px solid white;
+}
+
+/* Box 4 */
+span {
+    font-size: 0.7rem;
+}
+
+.nav-second {
+    font-size: 0.85rem;
+    font-weight: 700;
+}
+
+/* Cart */
+.nav-cart i {
+    font-size: 30px;
+}
+
+.nav-cart {
+    font-size: 0.85rem;
+    font-weight: 700;
+}
+
+/* Panel */
+.panel {
+    height: 40px;
+    display: flex;
+    color: black;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 19px;
+}
+
+.panel-ops p {
+    display: inline;
+    margin-left: 20px;
+    padding: 10px;
+}
+
+.panel-ops p:hover {
+    background-color: #0f1111;
+    color: white;
+    transition: 0.6s;
+}
+
+.panel-ops {
+    width: 70%;
+    font-size: 19px;
+}
+
+.panel-deals {
+    font-size: 19px;
+    font-weight: 700;
+    padding: 10px;
+    color: #0f1111;
+}
+
+.panel-deals a {
+    padding: 10px;
+}
+
+.panel-deals a:hover, 
+.panel-deals:hover {
+    background-color: #0f1111;
+    color: white;
+    transition: 0.6s;
+}
+
+/* Hero Section */
+.hero-section {
+    background-image: url("hero_image1.jpg");
+    background-size: cover;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.hero-msg {
+    background-color: white;
+    color: black;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.95rem;
+    width: 40%;
+    margin-bottom: 25px;
+    box-shadow: 5px 10px 15px;
+}
+
+.hero-msg a {
+    color: #007185;
+}
+
+/* Footer */
+footer {
+    margin-top: 15px;
+}
+
+.foot-panel1 {
+    color: black;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+}
+
+.foot-panel2 {
+    background-color: black;
+    color: white;
+    height: 100px;
+    display: flex;
+    font-size: 20px;
+    justify-content: space-evenly;
+}
+
+ul {
+    margin-top: 20px;
+    margin-right: 110px;
+}
+
+ul a {
+    display: block;
+    text-decoration: none;
+    font-size: 23px;
+    color: #dddddd;
+}
+
+.foot-panel3 {
+    background-color: black;
+    height: 80px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.foot-panel4 {
+    background-color: black;
+    color: white;
+    height: 80px;
+    font-size: 0.9rem;
+    text-align: center;
+}
+
+.pages {
+    padding-top: 0px;
+}
+
+.copyright {
+    padding-top: 30px;
+}
+
+/* Responsive Design for Mobile Phones */
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        height: auto;
+    }
+    
+    .nav-search {
+        width: 100%;
+    }
+    
+    .hero-section {
+        height: 250px;
+    }
+    
+    .hero-msg {
+        width: 80%;
+    }
+    
+    .panel {
+        flex-direction: column;
+        font-size: 16px;
+    }
+    
+    .panel-ops {
+        width: 100%;
+        text-align: center;
+    }
+    
+    .panel-deals {
+        font-size: 16px;
+    }
+    
+    .foot-panel2 {
+        flex-direction: column;
+        height: auto;
+    }
+    
+    ul a {
+        font-size: 18px;
+    }
+    
+    .foot-panel4 {
+        font-size: 0.75rem;
+    }
+}
+}
