--- a/About Us.css
+++ b/About Us.css
@@ -1,27 +1,73 @@
-*{
-    font-family: 'Times New Roman', Times, serif;
+* {
+  font-family: "Times New Roman", Times, serif;
 }
 
-.ceo:hover{
-    background-color: black;
-    color: white;
-    transition-duration: 0.6s;
-    border-left: 10px solid white;
-    padding: 15px;
+.ceo:hover {
+  background-color: black;
+  color: white;
+  transition-duration: 0.6s;
+  border-left: 10px solid white;
+  padding: 15px;
 }
 
-.co-founder:hover{
-    background-color: black;
-    color: white;
-    transition-duration: 0.6s;
-    border-left: 10px solid white;
-    padding: 15px;
+.co-founder:hover {
+  background-color: black;
+  color: white;
+  transition-duration: 0.6s;
+  border-left: 10px solid white;
+  padding: 15px;
 }
 
-.sales-manager:hover{
-    background-color: black;
-    color: white;
-    transition-duration: 0.6s;
-    border-left: 10px solid white;
+.sales-manager:hover {
+  background-color: black;
+  color: white;
+  transition-duration: 0.6s;
+  border-left: 10px solid white;
+  padding: 15px;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    text-align: center;
+    padding: 20px;
+  }
+
+  a {
+    display: block;
+    margin-bottom: 10px;
+    font-size: medium;
+  }
+
+  .content {
+    padding: 10px;
+  }
+
+  .shoes,
+  .watch,
+  .perfume,
+  .hoodie {
+    display: block;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .shoes:hover,
+  .watch:hover,
+  .perfume:hover,
+  .hoodie:hover {
     padding: 15px;
+  }
+
+  .ceo,
+  .co-founder,
+  .sales-manager {
+    display: block;
+    margin-bottom: 20px;
+  }
+
+  .ceo:hover,
+  .co-founder:hover,
+  .sales-manager:hover {
+    padding: 20px;
+  }
 }
