--- a/About Us.css
+++ b/About Us.css
@@ -26,75 +26,7 @@
   padding: 15px;
 }
 
-@media (max-width: 768px) {
-  .navbar {
-    text-align: center;
-    padding: 20px;
-  }
 
-  a {
-    display: block;
-    margin-bottom: 10px;
-    font-size: medium;
-  }
-
-  .content {
-    padding: 10px;
-  }
-
-  .shoes,
-  .watch,
-  .perfume,
-  .hoodie {
-    display: block;
-    margin-right: 0;
-    margin-bottom: 20px;
-  }
-
-  .shoes:hover,
-  .watch:hover,
-  .perfume:hover,
-  .hoodie:hover {
-    padding: 15px;
-<<<<<<< HEAD
-  }
-
-  .ceo,
-  .co-founder,
-  .sales-manager {
-    display: block;
-    margin-bottom: 20px;
-  }
-
-  .ceo:hover,
-  .co-founder:hover,
-  .sales-manager:hover {
-    padding: 20px;
-  }
-=======
-}
-
-* {
-    font-family: 'Times New Roman', Times, serif;
-}
-
-.ceo, 
-.co-founder, 
-.sales-manager {
-    padding: 15px;
-    transition: all 0.6s ease;
-}
-
-.ceo:hover, 
-.co-founder:hover, 
-.sales-manager:hover {
-    background-color: black;
-    color: white;
-    border-left: 10px solid white;
-    padding-left: 25px; /* Adjusted padding to maintain layout consistency */
-}
-
-/* --------- Responsive Design for Phones (max-width: 600px) --------- */
 @media screen and (max-width: 600px) {
     * {
         font-size: 14px;
@@ -106,7 +38,7 @@
         display: block;
         width: 100%; 
         padding: 20px; 
-        text-align: center; /* Center-align the content for mobile devices */
+        text-align: center; 
         box-sizing: border-box;
     }
 
@@ -115,9 +47,8 @@
     .sales-manager:hover {
         background-color: black;
         color: white;
-        border-left: none; /* Remove the left border for a clean mobile view */
-        border-top: 5px solid white; /* Use a top border instead to maintain design aesthetics */
+        border-left: none; 
+        border-top: 5px solid white; 
         padding-left: 20px;
     }
->>>>>>> 1658d042c2a00495e52417d23c8df32600a7e22e
 }
